# hf-space-composer

./: .env.example  .gitignore  BLOG_POST_DRAFT.md  Dockerfile  PITCH.md  README.md  REWARD_HACKING_FIX_PLAN.md  SUBMISSION.md  TRAINING.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
colab/: train_spaces_pipeline.ipynb
fixtures/: gold_trajectories.jsonl  grpo_prompts.jsonl  sft_pairs.jsonl  space_catalog.json  space_catalog_real.json  tasks.json  verified_spaces.json
fixtures/cards/: 0x7o_nllb-3.3B-demo.json  0x90e_ESRGAN-MANGA.json  0xfei_crypto-price-predict.json  0xhimzel_Detect-AI-Plagiarism.json  0xrushi_DialoGPT-Covid-Help-Doctor.json  123harsh_gradio-easywriter.json  14-26AA_sovits_aishell3.json  17TheWord_RealESRGAN.json  3DAIGC_LHM.json  (+5091 more)
local_training/: README.md  SLIDE_STORYLINE.md  eval_local.py  eval_two_tier.py  grpo_local.py  grpo_multistep.py  grpo_unsloth.py  grpo_vllm.py  make_plots.py  sft_local.py
scripts/: add_latencies.py  clean_enriched_tags.py  demo_live.py  discover_real_spaces.py  enrich_tags.py  evaluate.py  generate_fixtures.py  generate_gold_trajectories.py  generate_llm_trajectories.py  measure_inference_latencies.py  measure_latencies.py  record_fixtures.py  record_real.py  scrape_api_docs.py  scrape_popular_spaces.py  scrape_real_cards.py  sft_warmstart.py  train_grpo.py  upgrade_gold_pipelines.py  verify_spaces.py
server/: Dockerfile  __init__.py  app.py  auditor.py  expert_reviewer.py  requirements.txt  rubrics.py  schema_drift.py  space_caller.py  space_catalog.py  spaces_pipeline_environment.py
(+54 files in other folders)
